# zerolinux-refactored

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/: cleaner.rs  mod.rs  permissions.rs  system.rs  updater.rs
src/ui/: mod.rs  terminal.rs
src/utils/: disk_analyzer.rs  mod.rs
ui/: main.slint
