[package]
name = "zerolinux-cleaner"
version = "3.0.0"
edition = "2021"
authors = ["ZeroLinux Team"]
description = "Advanced System Cleaner & Updater for ZeroLinux"
license = "GPL-3.0"

[[bin]]
name = "zerolinux-cleaner"
path = "src/main.rs"

[dependencies]
slint        = "1.9"
sysinfo      = "0.33"
log          = "0.4"
env_logger   = "0.11"
tokio        = { version = "1", features = ["full"] }
libc         = "0.2"

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level    = 3
strip        = true
lto          = true
codegen-units = 1
